...
  },
  "confirm": "Confirm",
  "@confirm": {
    "type": "text",
    "placeholders": {}
  },
  "connect": "Connect",
  "@connect": {
    "type": "text",
    "placeholders": {}
  },
  "connectionAttemptFailed": "Connection attempt failed",
  "@connectionAttemptFailed": {
...
  "@enterASpacepName": {},
  "enterAUsername": "Enter a username",
  "@enterAUsername": {
    "type": "text",
    "placeholders": {}
  },
  "homeserver": "Homeserver",
  "@homeserver": {},
  "enterYourHomeserver": "Enter your homeserver",
  "@enterYourHomeserver": {
    "type": "text",
    "placeholders": {}
  },
...
  },
  "locationPermissionDeniedNotice": "Location permission denied. Please grant them to be able to share your location.",
  "@locationPermissionDeniedNotice": {
    "type": "text",
    "placeholders": {}
  },
  "login": "Login",
  "@login": {
    "type": "text",
    "placeholders": {}
  },
  "logInTo": "Log in to {homeserver}",
  "@logInTo": {
...
